--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@ Reveal.addEventListener( 'customevent', function() {
                 progress: true,
                 history: true,
                 center: true,
+                loop: true,
 
                 transition: 'slide', // none/fade/slide/convex/concave/zoom
 
